Fixed overlapping of sample data, added copy to input box on click functionality and reset input button

--- a/src/scss/css.scss
+++ b/src/scss/css.scss
@@ -20,6 +20,40 @@
 
 .b { @include b; }
 
+.input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.input-container input {
+    padding-right: 58px !important
+} 
+
+.clear-button {
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    align-self: flex-end;
+    color: $lightbox-button-hover-color;
+    font-weight: 400;
+    font-size: 28px;
+    padding-right: 15px;
+}
+
+.clear-button:hover{
+    cursor: pointer;
+}
+
+.clear-button:focus {
+    outline: none
+}
+
+.uk-text-small span {
+    font-family: monospace;
+    background-color: rgba(255,255,255,0.1)
+}
+
 .calculation-result-active {
 
     pointer-events: none;
@@ -88,4 +122,29 @@
     .uk-section-muted { background-color: rgba($global-muted-color,.9); }
     .uk-section-secondary {background-color: rgba($global-secondary-color,.9); }
     .uk-section-primary {background-color: rgba($global-primary-color,.9); }
+}
+
+@media screen and (max-width: $breakpoint-small) {
+
+    .input-container input {
+        padding-right: 42px !important;
+    } 
+
+    .clear-button {
+        padding-right: 12px;
+        font-size: 24px;
+    }
+
+    .uk-text-small {
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: wrap;
+        word-break: break-all;
+    }
+    
+
+    .uk-text-small span:hover {
+        cursor: pointer;
+    }
+
 }
